--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1044,8 +1044,12 @@ margin: 0 100px;
     .toggle{
         visibility: visible;
        }
-    .links li{
+       .links li{
         display: block;
+        animation: move_left 1s linear;
+        opacity: 0;
+        animation-fill-mode: forwards;
+        animation-delay: .3s;
     }
     .links li a{
         margin: 20px 0;
