--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,12 +687,15 @@ margin: 0 100px;
     width: 90%;
     height: 350px;
     object-fit: cover;
+    border-radius: 10px;
 }
 .left_single p{
     font-size:var(--pfs);
     color: var(--dfc);
     line-height: 28px;
-    padding-right: 1rem;
+    padding-right: 2rem;
+    text-align: justify;
+    margin-top: 20px;
 }
 .right_single{
     flex-basis: 35%;
@@ -876,6 +879,19 @@ margin: 0 100px;
    .right_single{
     flex-basis: 50%;
    }
+   .left_single .meta_data h1{
+    font-size: 2.8rem;
+   }
+   .left_single img{
+    width: 90%;
+    height: 400px;
+    border-radius: 10px;
+   }
+   .left_single p{
+    margin-top: 20px;
+    padding-right: 2rem;
+    text-align: justify;
+   }
 
 }
 
@@ -1000,6 +1016,19 @@ margin: 0 100px;
    .right_single{
     flex-basis: 70%;
    }
+   .left_single .meta_data h1{
+    font-size: 2.5rem;
+   }
+   .left_single img{
+    width: 100%;
+    height: 350px;
+    border-radius: 10px;
+   }
+   .left_single p{
+    margin-top: 20px;
+    padding-right: 0;
+    text-align: justify;
+   }
 }
 
 /* -------------------->Responsive media queries for Mobile devices (portrait mode): <---------------------- */
@@ -1109,7 +1138,7 @@ margin: 0 100px;
    }
    .port_item .port_img_box{
     width: 100%;
-    height: 350px;
+    height: 320px;
    }
    .port_detail_box h4{
     font-size: 1.1rem;
@@ -1147,5 +1176,18 @@ margin: 0 100px;
    }
    .right_single{
     flex-basis: 95%;
+   }
+   .left_single .meta_data h1{
+    font-size: 1.5rem;
+   }
+   .left_single img{
+    width: 100%;
+    height: 280px;
+    border-radius: 10px;
+   }
+   .left_single p{
+    margin-top: 10px;
+    padding-right: 0;
+    text-align: justify;
    }
 }
